Add header picture

--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ HEADER
 ************************************
 ***********************************/
 .header{
-    background: url('../img/bg-banner02.jpg') no-repeat fixed;
+    background: url('../img/websitePic.png') no-repeat fixed;
     background-size: cover;
     min-height: 650px;
     position: relative;
