--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 ol, ul {
 	list-style: none;
 }
+
 blockquote, q {
 	quotes: none;
 }
@@ -88,6 +89,7 @@ h1, h2, h3, h4, h5, h6{
 HEADER 
 ************************************
 ***********************************/
+
 .header{
     background: url('../img/websitePic.png') no-repeat fixed;
     background-size: cover;
@@ -96,7 +98,6 @@ HEADER
 }
 .bg-color
 {
-    background-color: rgba(0, 0, 0, 0.5);
     min-height: 650px;
 }
 #main-header
@@ -237,6 +238,24 @@ h2.bnr-sub-title
 features
 ************************************
 ***********************************/
+#mainidea {
+    background-color: #FF7E79;
+    color: white;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+#whatwedo {
+    background-color: #A67DC1; 
+    color: white;
+}
+
+#blog {
+    background-color: #ffa64d;
+    color: white;
+}
+
 .title, .service-title
 {
     font-family: 'Fira Sans', sans-serif;
@@ -348,6 +367,7 @@ ul.service-list li i
     color: inherit;
     padding: 10px 0px;
 }
+
 .service-item a
 {
     color: #1CEDC7;
