Include companies where mentees interned

--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,12 @@ features
     font-weight: bold;
 }
 
+
+#companies {
+    background-color: green;
+    color: white;
+}
+
 #whatwedo {
     background-color: #A67DC1; 
     color: white;
@@ -261,6 +267,7 @@ features
     font-family: 'Fira Sans', sans-serif;
     font-size: 35px;
     text-transform: uppercase;
+    color: white;
 }
 .item-img
 {
@@ -455,6 +462,42 @@ ul.service-list li i
     -moz-transform:rotateY(0);
     transform:rotateY(0)
 }
+
+/***********************************
+************************************
+COMPANIES
+************************************
+***********************************/
+
+.companiesection {
+  margin: 0 auto;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  align-items: center;
+}
+.company{
+  display:flex;
+  margin: 20px;
+  background-color: transparent;
+  /* border: 2px solid white; */
+  border-radius: 3px;
+  -webkit-filter: brightness(0) invert(1);
+  width: 210px;
+  height:60px;
+}
+
+.company:hover{
+  -webkit-filter: none;
+  /* rbackground-color: white; */
+}
+
+.company img {
+  max-width:100%;
+  max-height:100%;
+  margin: auto;
+}
+
 /***********************************
 ************************************
 TESTIMONIAL
