--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,17 @@ features
     text-transform: uppercase;
     color: white;
 }
+
+.content-section-a {
+    padding: 50px 0;
+}
+
+.content-section-b {
+    padding: 50px 0;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+}
+
 .item-img
 {
     margin-bottom: 15px;
@@ -808,7 +819,7 @@ body{
 .wrap-item h3 {
     font-size: 18px;
 }
-.title, .service-title {
+.gettingjobdone {
     font-size: 28px;
 }
 .sub-title {
