--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ HEADER
 ***********************************/
 
 .header{
-    background: url('../img/websitePic.png') no-repeat left center fixed;
+    background: url('../img/websitePic.png');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -831,10 +831,6 @@ Responsive media queries
 }
 }
 @media (min-width: 20px) and (max-width: 450px) {
-#header {
-  background: url('../img/websitePic.png') no-repeat left center fixed;
-}
-
 .navbar-default .navbar-brand {
     padding-left: 16px;
     margin-top: 0px;
