Fix media query for background

--- a/css/style.css
+++ b/css/style.css
@@ -814,10 +814,13 @@ cta
 Responsive media queries
 ************************************
 ***********************************/
-@media (min-width: 768px) and (max-width: 980px) {
+@media (min-width: 981px) {
   #header {
     background: url('../img/websitePic.png') no-repeat left center fixed;
   }
+}
+
+@media (min-width: 768px) and (max-width: 980px) {
     .service-item, .blog-sec, .wrap-item, .loction-info{
     margin-bottom: 15px;
 }
@@ -829,9 +832,6 @@ Responsive media queries
 }
 }
 @media (min-width: 451px) and (max-width: 767px) {
-    #header {
-      background: url('../img/websitePic.png') no-repeat left center fixed;
-    }
     .service-item, .blog-sec, .wrap-item, .loction-info{
     margin-bottom: 15px;
 }
